tests/ui/errors/snapshots/infer_named_numeric_expected_suggests_as_cast.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[main.lis:6:14]
 5 │   let n: int64 = 0;
 6 │   time.Sleep(n);
   ·              ┬
   ·              ╰── expected `Duration`, found `int64`
 7 │ }
   ╰────
  help: Cast with `as`, e.g. `value as Duration` · code: [infer.type_mismatch]
