tests/ui/errors/snapshots/infer_named_primitive_type_used_as_value.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Cannot use native constructor as a value
   ╭─[test.lis:5:11]
 4 │ fn main() {
 5 │   let m = time.Month
   ·           ─────┬────
   ·                ╰── native constructors must be called directly
 6 │ }
   ╰────
  help: Use a closure instead: `|args| time.Month(args)` · code: [infer.native_constructor_value]
