tests/ui/errors/snapshots/infer_native_method_value_on_struct_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot use native method as a value
   ╭─[test.lis:8:28]
 7 │   let b = Box { items: [1, 2] }
 8 │   fmt.Printf("count=%d\n", b.items.length)
   ·                            ───────┬──────
   ·                                   ╰── native methods must be called directly
 9 │ }
   ╰────
  help: Call it directly: `receiver.length()`. To use it as a value, wrap in a closure: `|args| receiver.length(args)` · code: [infer.native_method_value]
