tests/ui/errors/snapshots/infer_native_receiver_method_value.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot use native method as a value
   ╭─[test.lis:4:11]
 3 │   let s = [1, 2, 3]
 4 │   let f = s.length
   ·           ────┬───
   ·               ╰── native methods must be called directly
 5 │   let _ = f
   ╰────
  help: Call it directly: `receiver.length()`. To use it as a value, wrap in a closure: `|args| receiver.length(args)` · code: [infer.native_method_value]
