tests/ui/errors/snapshots/infer_negative_literal_overflow_int8.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Integer literal overflow
   ╭─[test.lis:3:17]
 2 │ fn test() {
 3 │   let x: int8 = -129;
   ·                 ──┬─
   ·                   ╰── overflows `int8`
 4 │ }
   ╰────
  help: `int8` must be in range `-128` to `127` · code: [infer.integer_literal_overflow]
