tests/ui/errors/snapshots/infer_nested_as_binding_in_for.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid `as` binding
   ╭─[test.lis:5:8]
 4 │ fn test(pairs: Slice<(Point, int)>) {
 5 │   for (Point { x, .. } as p, _) in pairs {}
   ·        ──────────┬─────────
   ·                  ╰── `as` is disallowed here
 6 │ }
   ╰────
  help: Use `as` only in `match`, `if let`, `while let`, or `Some(value as name)` in `select` · code: [infer.as_binding_in_irrefutable_context]
