tests/ui/errors/snapshots/infer_nested_as_binding_in_let.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid `as` binding
   ╭─[test.lis:5:8]
 4 │ fn test(pair: (Point, int)) -> int {
 5 │   let (Point { x, .. } as p, z) = pair;
   ·        ──────────┬─────────
   ·                  ╰── `as` is disallowed here
 6 │   p.x + z
   ╰────
  help: Use `as` only in `match`, `if let`, `while let`, or `Some(value as name)` in `select` · code: [infer.as_binding_in_irrefutable_context]
