tests/ui/errors/snapshots/infer_nested_as_binding_in_param.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid `as` binding
   ╭─[test.lis:4:30]
 3 │ 
 4 │ fn test(pair: (Point, int), (Point { x, .. } as p, z): (Point, int)) -> int { x + z }
   ·                              ──────────┬─────────
   ·                                        ╰── `as` is disallowed here
   ╰────
  help: Use `as` only in `match`, `if let`, `while let`, or `Some(value as name)` in `select` · code: [infer.as_binding_in_irrefutable_context]
